test_files/netlist_connected/invalid/invalid_07_line_1.net
XU1 in out 0 AMP
R1 in 0 1k
.tran 1m
.backanno
.end
